--- a/R01_BMI/MainPage.xaml
+++ b/R01_BMI/MainPage.xaml
@@ -8,9 +8,19 @@
 
     <StackLayout>
         <!-- Place new controls here -->
-        <Label Text="Welcome to Xamarin.Forms!" 
+        <Label Text="BMI計算" 
            HorizontalOptions="Center"
            VerticalOptions="CenterAndExpand" />
+        <StackLayout HorizontalOptions="CenterAndExpand"
+                     VerticalOptions="CenterAndExpand">
+            <Label Text="身長を入力(cm)"  />
+            <Entry MaxLength="3" Placeholder="身長を入力"x:Name="tBox1" />
+            <Label Text="体重を入力(kg)"  />
+            <Entry MaxLength="2" Placeholder="体重を入力"x:Name="tBox2" />
+            <Button Text="BMIを計算する" Clicked="Button_Clicked" />
+            <Label Text="ボタンを押すとBMIを計算します"  x:Name="lbl" />
+
+        </StackLayout>
     </StackLayout>
 
 </ContentPage>
